--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -20,6 +20,9 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@master
         with:
           args: >
+	    -Dsonar.organization=oth-datapipeline
+	    -Dsonar.projectKey=oth-datapipeline_scraping-scripts
+	    -Dsonar.sources=.
             -Dsonar.qualitygate.wait=true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
