Added manual pipeline trigger; WIP

--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -1,6 +1,7 @@
 name: Sonar Scan & Quality Checks on PR
 
 on:
+  workflow_dispatch:   # Allows for manually triggering pipeline
   push:
     branches:
       - master
