--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -25,6 +25,7 @@ jobs:
             -Dsonar.projectKey=oth-datapipeline_scraping-scripts
             -Dsonar.sources=.
             -Dsonar.qualitygate.wait=true
+            -Dsonar.python.version=3.7,3.8,3.9,3.10
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
