Issue #12: Cleanup files after testing and change workflow file for testing

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -2,11 +2,11 @@ name: Run tests
 
 on: 
   push: 
-    -branches: 
+    branches: 
       - master
       - develop
   pull_request:
-    -branches: 
+    branches: 
       - master
       - develop
 
