Dockerized scraper; modified config to adhere to docker network

--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
 
 ,
     "Kafka": {
-        "Host": "localhost",
-        "Port": 9092
+        "Host": "broker",
+        "Port": 29092
     }
 ,
     "RssHeader": {
