--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,5 @@
-appdirs==1.4.4
-beautifulsoup4==4.10.0
-bs4==0.0.1
-certifi==2021.10.8
-cffi==1.15.0
-cfgv==3.3.1
-charset-normalizer==2.0.12
-colorama==0.4.4
-cssselect==1.1.0
-distlib==0.3.4
-fake-useragent==0.1.11
-feedparser==6.0.8
-filelock==3.6.0
-gevent==21.12.0
-greenlet==1.1.2
-identify==2.4.12
-idna==3.3
-importlib-metadata==4.11.3
-kafka-python==2.0.2
-lxml==4.8.0
-nodeenv==1.6.0
-parse==1.19.0
-platformdirs==2.5.1
-pre-commit==2.17.0
-pycparser==2.21
-pyee==8.2.2
-pyppeteer==1.0.2
-pyquery==1.4.3
-python-dateutil==2.8.2
-pytz==2022.1
-PyYAML==6.0
-requests==2.27.1
-requests-html==0.10.0
-sgmllib3k==1.0.0
-six==1.16.0
-soupsieve==2.3.1
-toml==0.10.2
-tqdm==4.63.1
-typing-extensions==4.1.1
-urllib3==1.26.9
-virtualenv==20.14.0
-w3lib==1.22.0
-websockets==10.2
-zipp==3.7.0
-zope.event==4.5.0
-zope.interface==5.4.0
+feedparser~=6.0.8
+kafka-python~=2.0.2
+pytest~=7.1.1
+requests~=2.27.1
+requests-mock~=1.9.3
