--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
             -Dsonar.organization=oth-datapipeline
             -Dsonar.projectKey=oth-datapipeline_scraping-scripts
             -Dsonar.sources=.
+            -Dsonar.test.exclusions=test/**,docs/**
             -Dsonar.qualitygate.wait=true
             -Dsonar.python.version=3.7,3.8,3.9,3.10
         env:
