Issue #20: change config to server config

--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
 
 ,
     "Kafka": {
-        "Host": "localhost",
-        "Port": 9092
+        "Host": "broker",
+        "Port": 29092
     }
 ,
     "RssHeader": {
