--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Gather sensitive data for testing
+        run: |
+          echo 'REDDIT_CLIENT_ID=${{ secrets.REDDIT_CLIENT_ID }}' > .env
+          echo 'REDDIT_CLIENT_SECRET=${{ secrets.REDDIT_CLIENT_SECRET }}' >> .env
+          echo 'TWITTER_CONSUMER_KEY=${{ secrets.TWITTER_CONSUMER_KEY }}' >> .env
+          echo 'TWITTER_CONSUMER_SECRET=${{ secrets.TWITTER_CONSUMER_SECRET }}' >> .env
+          echo 'TWITTER_BEARER_TOKEN=${{ secrets.TWITTER_BEARER_TOKEN }}' >> .env
       - name: Execute tests with pytest
         run: pytest test
 
