--- a/config.json
+++ b/config.json
@@ -13,6 +13,10 @@
             "Port": 29092
         }
     },
+    "Mongo": {
+        "Host": "mongo", 
+        "Port": 27017
+    },
     "RssHeader": {
         "accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9",
         "accept-language": "de-DE,de;q=0.9,en-US;q=0.8,en;q=0.7",
