added mongo secrets to workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,8 @@ jobs:
           echo 'TWITTER_CONSUMER_KEY=${{ secrets.TWITTER_CONSUMER_KEY }}' >> .env
           echo 'TWITTER_CONSUMER_SECRET=${{ secrets.TWITTER_CONSUMER_SECRET }}' >> .env
           echo 'TWITTER_BEARER_TOKEN=${{ secrets.TWITTER_BEARER_TOKEN }}' >> .env
+          echo 'MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}' >> .env
+          echo 'MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}' >> .env
       - name: Execute tests with pytest
         run: pytest test
 
